v1.0.0/modules/schema/pages/class/MonthDayInterval.adoc
= `MonthDayInterval`
:toclevels: 4


+++Interval between two times specified as month and day.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MonthDayInterval`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`MonthDayInterval`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<end,`end`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++End time of this interval.+++

| <<start,`start`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Start time of this interval.+++
|===

'''


//[discrete]
[#end]
=== `end`
+++End time of this interval.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MonthDayInterval.end`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#start]
=== `start`
+++Start time of this interval.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MonthDayInterval.start`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


