v1.1.0/modules/schema/pages/class/MonthDayInterval.adoc
= `MonthDayInterval`
:toclevels: 4


+++Interval between two times specified as month and day.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MonthDayInterval`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`MonthDayInterval`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<end,`end`>>
//| [[slots_table.end]]<<end,`end`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++End time of this interval.+++
| _n/a_

| <<start,`start`>>
//| [[slots_table.start]]<<start,`start`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Start time of this interval.+++
| _n/a_
|===

'''


//[discrete]
[#end]
=== `end`
+++End time of this interval.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MonthDayInterval.end`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.end,&#10548;>>
--
////


//[discrete]
[#start]
=== `start`
+++Start time of this interval.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MonthDayInterval.start`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.start,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
